add translations for roles

--- a/src/assets/languages/de.json
+++ b/src/assets/languages/de.json
@@ -42,5 +42,82 @@
             "strength": "Kraft",
             "stamina": "Ausdauer"
         }
+    },
+    "roles": {
+        "r1": "Außenverteidiger (Verteidigen)",
+        "r2": "Außenverteidiger (Unterstützen)",
+        "r3": "Außenverteidiger (Angreifen)",
+        "r4": "Ballspielender Verteidiger (Verteidigen)",
+        "r5": "Ballspielender Verteidiger (Vorstopper)",
+        "r6": "Ballspielender Verteidiger (Rückendeckend)",
+        "r7": "Flügelverteidiger (Verteidigen)",
+        "r8": "Flügelverteidiger (Unterstützend)",
+        "r9": "Flügelverteidiger (Angreifend)",
+        "r10": "Innenverteidiger (Verteidigen)",
+        "r11": "Innenverteidiger (Vorstopper)",
+        "r12": "Innenverteidiger (Rückendeckend)",
+        "r13": "Inverser Außenverteidiger (Verteidigen)",
+        "r14": "Inverser Außenverteidiger (Unterstützen)",
+        "r15": "Inverser Außenverteidiger (Angreifen)",
+        "r16": "Kompletter Flügelverteidiger (Unterstützend)",
+        "r17": "Kompletter Flügelverteidiger (Angreifen)",
+        "r18": "Kompromissloser Außenverteidiger (Verteidigen)",
+        "r19": "Kompromissloser Innenverteidiger (Verteidigen)",
+        "r20": "Kompromissloser Innenverteidiger (Vorstopper)",
+        "r21": "Kompromissloser Innenverteidiger (Rückendeckend)",
+        "r22": "Libero (Unterstützend)",
+        "r23": "Libero (Angreifen)",
+        "r24": "Abräumer (Verteidigen)",
+        "r25": "Äußerer Mittelfeldspieler (Verteidigen)",
+        "r26": "Äußerer Mittelfeldspieler (Unterstützen)",
+        "r27": "Äußerer Mittelfeldspieler (Angreifen)",
+        "r28": "Äußerer Spielmacher (Unterstützen)",
+        "r29": "Äußerer Spielmacher (Angreifen)",
+        "r30": "Äußerer Zielspieler (Unterstützen)",
+        "r31": "Äußerer Zielspieler (Angreifen)",
+        "r32": "Ballerobernder Mittelfeldspieler (Verteidigen)",
+        "r33": "Ballerobernder Mittelfeldspieler (Unterstützen)",
+        "r34": "Box-to-Box Mittelfeldspieler (Unterstützen)",
+        "r35": "Carrilero (Unterstützen)",
+        "r36": "Defensiver Flügelspieler (Verteidigen)",
+        "r37": "Defensiver Flügelspieler (Unterstützen)",
+        "r38": "Enganche (Unterstützen)",
+        "r39": "Flügelspieler (Unterstützen)",
+        "r40": "Flügelspieler (Angreifen)",
+        "r41": "Inverser Außenstürmer (Unterstützen)",
+        "r42": "Inverser Außenstürmer (Angreifen)",
+        "r43": "Inverser Flügelspieler (Unterstützen)",
+        "r44": "Inverser Flügelspieler (Angreifen)",
+        "r45": "Mezzala (Unterstützen)",
+        "r46": "Mezzala (Angreifen)",
+        "r47": "Offensiver Mittelfeldspieler (Unterstützen)",
+        "r48": "Offensiver Mittelfeldspieler (Angreifen)",
+        "r49": "Raumdeuter (Angreifen)",
+        "r50": "Regista (Unterstützen)",
+        "r51": "Schattenstürmer (Angreifen)",
+        "r52": "Segundo Volante (Unterstützen)",
+        "r53": "Segundo Volante (Angreifen)",
+        "r54": "Tiefer Sechser (Verteidigen)",
+        "r55": "Vertikaler Spielmacher (Unterstützen)",
+        "r56": "Vorgeschobener Spielmacher (Unterstützen)",
+        "r57": "Vorgeschobener Spielmacher (Angreifen)",
+        "r58": "Zentraler Mittelfeldspieler (Verteidigen)",
+        "r59": "Zentraler Mittelfeldspieler (Unterstützen)",
+        "r60": "Zentraler Mittelfeldspieler (Angreifen)",
+        "r61": "Zurückgezogener Spielmacher (Verteidigen)",
+        "r62": "Zurückgezogener Spielmacher (Unterstützen)",
+        "r63": "Falsche Neun (Unterstützen)",
+        "r64": "Hängende Spitze (Unterstützen)",
+        "r65": "Hängende Spitze (Angreifen)",
+        "r66": "Knipser (Angreifen)",
+        "r67": "Kompletter Stürmer (Unterstützen)",
+        "r68": "Kompletter Stürmer (Angreifen)",
+        "r69": "Pressender Stürmer (Verteidigen)",
+        "r70": "Pressender Stürmer (Unterstützen)",
+        "r71": "Pressender Stürmer (Angreifen)",
+        "r72": "Stoßstürmer (Angreifen)",
+        "r73": "Trequartista (Angreifen)",
+        "r74": "Zielspieler (Unterstützen)",
+        "r75": "Zielspieler (Angreifen)"
     }
 }
