--- a/src/assets/languages/en.json
+++ b/src/assets/languages/en.json
@@ -42,5 +42,82 @@
             "strength": "Strength",
             "stamina": "Stamina"
         }
+    },
+    "roles": {
+        "r1": "Full-Back (Defend)",
+        "r2": "Full-Back (Support)",
+        "r3": "Full-Back (Attack)",
+        "r4": "Ball Playing Defender (Defend)",
+        "r5": "Ball Playing Defender (Stopper)",
+        "r6": "Ball Playing Defender (Cover)",
+        "r7": "Wing-Back (Defend)",
+        "r8": "Wing-Back (Support)",
+        "r9": "Wing-Back (Angreifend)",
+        "r10": "Central Defender (Defend)",
+        "r11": "Central Defender (Stopper)",
+        "r12": "Central Defender (Cover)",
+        "r13": "Inverted Wing-Back (Defend)",
+        "r14": "Inverted Wing-Back (Support)",
+        "r15": "Inverted Wing-Back (Attack)",
+        "r16": "Complete Wing-Back (Support)",
+        "r17": "Complete Wing-Back (Attack)",
+        "r18": "No-Nonsense Full-Back (Defend)",
+        "r19": "No-Nonsense Centre-Back (Defend)",
+        "r20": "No-Nonsense Centre-Back (Stopper)",
+        "r21": "No-Nonsense Centre-Back (Cover)",
+        "r22": "Libero (Support)",
+        "r23": "Libero (Attack)",
+        "r24": "Anchor Man (Defend)",
+        "r25": "Wide Midfielder (Defend)",
+        "r26": "Wide Midfielder (Support)",
+        "r27": "Wide Midfielder (Attack)",
+        "r28": "Wide Playmaker (Support)",
+        "r29": "Wide Playmaker (Attack)",
+        "r30": "Wide Target Man (Support)",
+        "r31": "Wide Target Man (Attack)",
+        "r32": "Ball Winning Midfielder (Defend)",
+        "r33": "Ball Winning Midfielder (Support)",
+        "r34": "Box To Box Midfielder (Support)",
+        "r35": "Carrilero (Support)",
+        "r36": "Defensive Winger (Defend)",
+        "r37": "Defensive Winger (Support)",
+        "r38": "Enganche (Support)",
+        "r39": "Winger (Support)",
+        "r40": "Winger (Attack)",
+        "r41": "Inside Forward (Support)",
+        "r42": "Inside Forward (Attack)",
+        "r43": "Inverted Winger (Support)",
+        "r44": "Inverted Winger (Attack)",
+        "r45": "Mezzala (Support)",
+        "r46": "Mezzala (Attack)",
+        "r47": "Attacking Midfielder (Support)",
+        "r48": "Attacking Midfielder (Attack)",
+        "r49": "Raumdeuter (Attack)",
+        "r50": "Regista (Support)",
+        "r51": "Shadow Striker (Attack)",
+        "r52": "Segundo Volante (Support)",
+        "r53": "Segundo Volante (Attack)",
+        "r54": "Half Back (Defend)",
+        "r55": "Roaming Playmaker (Support)",
+        "r56": "Advanced Playmaker (Support)",
+        "r57": "Advanced Playmaker (Attack)",
+        "r58": "Central Midfielder (Defend)",
+        "r59": "Central Midfielder (Support)",
+        "r60": "Central Midfielder (Attack)",
+        "r61": "Deep Lying Playmaker (Defend)",
+        "r62": "Deep Lying Playmaker (Support)",
+        "r63": "False Nine (Support)",
+        "r64": "Deep Lying Forward (Support)",
+        "r65": "Deep Lying Forward (Attack)",
+        "r66": "Poacher (Attack)",
+        "r67": "Complete Forward (Support)",
+        "r68": "Complete Forward (Attack)",
+        "r69": "Pressing Forward (Defend)",
+        "r70": "Pressing Forward (Support)",
+        "r71": "Pressing Forward (Attack)",
+        "r72": "Advanced Forward (Attack)",
+        "r73": "Trequartista (Attack)",
+        "r74": "Target Man (Support)",
+        "r75": "Target Man (Attack)"
     }
 }
