Add missing defensive midfielder role

--- a/src/assets/languages/de.json
+++ b/src/assets/languages/de.json
@@ -118,6 +118,8 @@
         "r72": "Stoßstürmer (Angreifen)",
         "r73": "Trequartista (Angreifen)",
         "r74": "Zielspieler (Unterstützen)",
-        "r75": "Zielspieler (Angreifen)"
+        "r75": "Zielspieler (Angreifen)",
+        "r76": "Defensiver Mittelfeldspieler (Verteidigen)",
+        "r77": "Defensiver Mittelfeldspieler (Unterstützen)"
     }
 }
