--- a/src/assets/languages/en.json
+++ b/src/assets/languages/en.json
@@ -118,6 +118,8 @@
         "r72": "Advanced Forward (Attack)",
         "r73": "Trequartista (Attack)",
         "r74": "Target Man (Support)",
-        "r75": "Target Man (Attack)"
+        "r75": "Target Man (Attack)",
+        "r76": "Defensive Midfielder (Defend)",
+        "r77": "Defensive Midfielder (Support)"
     }
 }
